htmlにp要素、cssにbackground-colorを設定

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>HTMLトップページ</h1>
+    <h1>2320266のページ</h1>
+    <p>練習用ページです</p>
 </body>
 </html>
